MODON MRE BPDEV/force-app/main/default/objects/Phase__c/Phase__c.object-meta.xml
<CustomObject>
    <label>Phase</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Building/Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>