MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/AccountNumberEscrow__c.field-meta.xml
<CustomField>
    <fullName>AccountNumberEscrow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number (Escrow)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>