MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ADMAccountName__c.field-meta.xml
<CustomField>
    <fullName>ADMAccountName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>