MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ADMAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ADMAccountNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>