MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ADMBankName__c.field-meta.xml
<CustomField>
    <fullName>ADMBankName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>