MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ADMDistrictNameArabic__c.field-meta.xml
<CustomField>
    <fullName>ADMDistrictNameArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM District Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>