MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ADMIBANNumber__c.field-meta.xml
<CustomField>
    <fullName>ADMIBANNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM IBAN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>