MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/AnticipatedCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>AnticipatedCompletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anticipated Completion Date</label>
    <type>Date</type>
</CustomField>