MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/BankNameEscrow__c.field-meta.xml
<CustomField>
    <fullName>BankNameEscrow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Name (Escrow)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>