MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/BranchEscrow__c.field-meta.xml
<CustomField>
    <fullName>BranchEscrow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch (Escrow)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>