MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/BuildingName__c.field-meta.xml
<CustomField>
    <fullName>BuildingName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>