MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/BuildingSectionCode__c.field-meta.xml
<CustomField>
    <fullName>BuildingSectionCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building/Section Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>