MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/BusinessUnitId__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Unit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>