MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/CityArabic__c.field-meta.xml
<CustomField>
    <fullName>CityArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CityArabic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>