MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/CityEnglish__c.field-meta.xml
<CustomField>
    <fullName>CityEnglish__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City English</label>
    <length>25</length>
    <type>Text</type>
</CustomField>