MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/CompletionCertificateDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionCertificateDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Certificate Date</label>
    <type>Date</type>
</CustomField>