MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ContractorDLPEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractorDLPEndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contractor DLP End Date</label>
    <type>Date</type>
</CustomField>