MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ContractorDLPStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractorDLPStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contractor DLP Start Date</label>
    <type>Date</type>
</CustomField>