MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/CountryArabic__c.field-meta.xml
<CustomField>
    <fullName>CountryArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CountryArabic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>