MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/CountryEnglish__c.field-meta.xml
<CustomField>
    <fullName>CountryEnglish__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CountryEnglish</label>
    <length>80</length>
    <type>Text</type>
</CustomField>