MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/DefaultUnitFinishing__c.field-meta.xml
<CustomField>
    <fullName>DefaultUnitFinishing__c</fullName>
    <label>Default Unit Finishing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Dark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>