MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/DirectDebitApplied__c.field-meta.xml
<CustomField>
    <fullName>DirectDebitApplied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Debit Applied</label>
    <type>Checkbox</type>
</CustomField>