MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/DirectDebitOIC__c.field-meta.xml
<CustomField>
    <fullName>DirectDebitOIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direct Debit OIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>