MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>Phases</relationshipLabel>
    <relationshipName>Phases</relationshipName>
    <type>Lookup</type>
</CustomField>