MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/EligibileforMultiPurposeRoom__c.field-meta.xml
<CustomField>
    <fullName>EligibileforMultiPurposeRoom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Multi-Purpose Room</label>
    <type>Checkbox</type>
</CustomField>