MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/EligibleforPodium__c.field-meta.xml
<CustomField>
    <fullName>EligibleforPodium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for POD</label>
    <type>Checkbox</type>
</CustomField>