MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/EligibleforUnitFinishes__c.field-meta.xml
<CustomField>
    <fullName>EligibleforUnitFinishes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Unit Finishes</label>
    <type>Checkbox</type>
</CustomField>