MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/EntityName__c.field-meta.xml
<CustomField>
    <fullName>EntityName__c</fullName>
    <label>EntityName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hudayriyat Development - L.L.C- O.P.C</fullName>
            </value>
            <value>
                <fullName>Reem Developers -Sole Proprietorship L.L.C</fullName>
            </value>
            <value>
                <fullName>AL TAMOUH INVESTMENTS COMPANY L.L.C.</fullName>
            </value>
            <value>
                <fullName>Modon Properties PJSC</fullName>
            </value>
            <value>
                <fullName>Modon Real Estate Development Limited</fullName>
            </value>
            <value>
                <fullName>REEM HILLS - SOLE PROPRIETORSHIP L.L.C</fullName>
            </value>
            <value>
                <fullName>AL TAMOUH INVESTMENTS COMPANY L.L.C</fullName>
                <isActive>false</isActive>
                <label>AL TAMOUH INVESTMENTS COMPANY L.L.C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>