MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/EOI_Required__c.field-meta.xml
<CustomField>
    <fullName>EOI_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EOI Required</label>
    <type>Checkbox</type>
</CustomField>