MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/EOIFee__c.field-meta.xml
<CustomField>
    <fullName>EOIFee__c</fullName>
    <label>EOI Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>