MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/EscrowAccount__c.field-meta.xml
<CustomField>
    <fullName>EscrowAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrow Account</label>
    <referenceTo>EscrowAccount__c</referenceTo>
    <relationshipLabel>Phases</relationshipLabel>
    <relationshipName>Phases</relationshipName>
    <type>Lookup</type>
</CustomField>