MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/EstimatedCompletionDateArabic__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCompletionDateArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Completion Date Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>