MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/EstimatedHandoverDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedHandoverDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Handover Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>