MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ExcludeFromDarna__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromDarna__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Darna</label>
    <type>Checkbox</type>
</CustomField>