MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Facade_Style__c.field-meta.xml
<CustomField>
    <fullName>Facade_Style__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facade Style</label>
    <type>Checkbox</type>
</CustomField>