MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>