MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Handover_Date_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Date Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>