MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/HomeMaintenanceFee__c.field-meta.xml
<CustomField>
    <fullName>HomeMaintenanceFee__c</fullName>
    <label>Home Maintenance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>