MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/IBANNoEscrow__c.field-meta.xml
<CustomField>
    <fullName>IBANNoEscrow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBAN No (Escrow)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>