MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/InternationalLaunchDate__c.field-meta.xml
<CustomField>
    <fullName>InternationalLaunchDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>International Launch Date</label>
    <type>Date</type>
</CustomField>