MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Is_Reservation_Form_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Reservation_Form_Required__c</fullName>
    <label>Is Reservation Form Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>