MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>