MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/LatePaymentCharges__c.field-meta.xml
<CustomField>
    <fullName>LatePaymentCharges__c</fullName>
    <label>Late Payment Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>