MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/LatitudeLongitude__c.field-meta.xml
<CustomField>
    <fullName>LatitudeLongitude__c</fullName>
    <label>Latitude &amp; Longitude</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>