MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/LaunchEndDate__c.field-meta.xml
<CustomField>
    <fullName>LaunchEndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Launch End Date</label>
    <type>Date</type>
</CustomField>