MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/LaunchStartDate__c.field-meta.xml
<CustomField>
    <fullName>LaunchStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Launch Start Date</label>
    <type>Date</type>
</CustomField>