MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/LPCGraceDays__c.field-meta.xml
<CustomField>
    <fullName>LPCGraceDays__c</fullName>
    <label>LPC Grace Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>