MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Numberoffloors__c.field-meta.xml
<CustomField>
    <fullName>Numberoffloors__c</fullName>
    <label>Number of floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>