MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/OracleId__c.field-meta.xml
<CustomField>
    <fullName>OracleId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>