MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/OriginalAnticipatedCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalAnticipatedCompletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Anticipated Completion Date</label>
    <type>Date</type>
</CustomField>