MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Payment_Required__c.field-meta.xml
<CustomField>
    <fullName>Payment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a single-unit booking on this Phase must collect the booking fees before the Sales Order is created (Book Units journey). When unchecked, the unit is booked directly with no fee lines, no hold and no payment step. Overridden per deal by Opportunity.Bypass_Modon_Pay__c.</description>
    <label>Payment Required</label>
    <type>Checkbox</type>
</CustomField>