MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Phase_Code__c.field-meta.xml
<CustomField>
    <fullName>Phase_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phase Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>