MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Phase_Name__c.field-meta.xml
<CustomField>
    <fullName>Phase_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phase Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>