MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Phase_Number__c.field-meta.xml
<CustomField>
    <fullName>Phase_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phase Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>