MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/PhaseImagePublicURL__c.field-meta.xml
<CustomField>
    <fullName>PhaseImagePublicURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PhaseImagePublicURL</label>
    <type>Url</type>
</CustomField>