MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/PhaseNameArabic__c.field-meta.xml
<CustomField>
    <fullName>PhaseNameArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phase Name Arabic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>