MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/PhaseOptions__c.field-meta.xml
<CustomField>
    <fullName>PhaseOptions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phase Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>