MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Plot_number__c.field-meta.xml
<CustomField>
    <fullName>Plot_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>