MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>