MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Project_Plot_No__c.field-meta.xml
<CustomField>
    <fullName>Project_Plot_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Plot No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>