MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Project_s_Land_Acquisition_byseller__c.field-meta.xml
<CustomField>
    <fullName>Project_s_Land_Acquisition_byseller__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project’s Land Acquisition byseller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>