MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ProposedAnticipatedCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>ProposedAnticipatedCompletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed Anticipated Completion Date</label>
    <type>Date</type>
</CustomField>