MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Q_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Q_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Q External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>