MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ReservationAmount__c.field-meta.xml
<CustomField>
    <fullName>ReservationAmount__c</fullName>
    <label>Reservation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>