MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Sector_No__c.field-meta.xml
<CustomField>
    <fullName>Sector_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sector No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>