MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Service_Charges__c.field-meta.xml
<CustomField>
    <fullName>Service_Charges__c</fullName>
    <label>Service Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>