MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/ShippingStreetArabic__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreetArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ShippingStreetArabic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>