MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/Source_Entity__c.field-meta.xml
<CustomField>
    <fullName>Source_Entity__c</fullName>
    <formula>TEXT( Project__r.Source_Entity__c )</formula>
    <label>Source Entity</label>
    <type>Text</type>
</CustomField>