MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/SPA_Generation_Approach__c.field-meta.xml
<CustomField>
    <fullName>SPA_Generation_Approach__c</fullName>
    <label>SPA Generation Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nintex</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>