MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/State_Arabic__c.field-meta.xml
<CustomField>
    <fullName>State_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Arabic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>