MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/StateEnglish__c.field-meta.xml
<CustomField>
    <fullName>StateEnglish__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State English</label>
    <length>80</length>
    <type>Text</type>
</CustomField>