MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/SwiftCodeEscrow__c.field-meta.xml
<CustomField>
    <fullName>SwiftCodeEscrow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Swift Code (Escrow)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>