MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/TaxPercentage__c.field-meta.xml
<CustomField>
    <fullName>TaxPercentage__c</fullName>
    <label>Tax %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>