MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/TransferThresholdLimit__c.field-meta.xml
<CustomField>
    <fullName>TransferThresholdLimit__c</fullName>
    <label>Transfer Threshold Limit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>