MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/UnifiedProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>UnifiedProjectNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unified Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>