MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/unit_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>unit_Image_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>unit Image Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>