MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/VAEnabled__c.field-meta.xml
<CustomField>
    <fullName>VAEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VA Enabled</label>
    <type>Checkbox</type>
</CustomField>