MODON MRE BPDEV/force-app/main/default/objects/Phase__c/fields/VIPLaunchDate__c.field-meta.xml
<CustomField>
    <fullName>VIPLaunchDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VIP Launch Date</label>
    <type>Date</type>
</CustomField>