MODON MRE BPDEV/force-app/main/default/objects/Phase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Phase_Number__c</columns>
    <columns>EscrowAccount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>